--- a/aws/cloudformation-templates/apigateway-deploy.yaml
+++ b/aws/cloudformation-templates/apigateway-deploy.yaml
@@ -2,26 +2,25 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Description: >
-    This template deploys the Retail Demo Store API Gateway
+  This template deploys the Retail Demo Store API Gateway
 
 Parameters:
-    ApiGatewayId:
-      Type: String
+  ApiGatewayId:
+    Type: String
 
 Resources:
-
   HttpApiStage:
-    Type: 'AWS::ApiGatewayV2::Stage'
+    Type: "AWS::ApiGatewayV2::Stage"
     Properties:
-      StageName: '$default'
+      StageName: "$default"
       ApiId: !Ref ApiGatewayId
       AutoDeploy: true
-      AccessLogSettings:
-        DestinationArn: !GetAtt AccessLogs.Arn
-        Format: '{ "requestId":"$context.requestId", "ip": "$context.identity.sourceIp", "requestTime":"$context.requestTime", "httpMethod":"$context.httpMethod","routeKey":"$context.routeKey", "status":"$context.status","protocol":"$context.protocol", "integrationStatus": $context.integrationStatus, "integrationLatency": $context.integrationLatency, "responseLength":"$context.responseLength", "authorizerError": "$context.authorizer.error" }'
+      # AccessLogSettings:
+      #   DestinationArn: !GetAtt AccessLogs.Arn
+      #   Format: '{ "requestId":"$context.requestId", "ip": "$context.identity.sourceIp", "requestTime":"$context.requestTime", "httpMethod":"$context.httpMethod","routeKey":"$context.routeKey", "status":"$context.status","protocol":"$context.protocol", "integrationStatus": $context.integrationStatus, "integrationLatency": $context.integrationLatency, "responseLength":"$context.responseLength", "authorizerError": "$context.authorizer.error" }'
 
-  AccessLogs:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      RetentionInDays: 30
-      LogGroupName: !Sub "/${AWS::StackName}/APIAccessLogs"
+  # AccessLogs:
+  #   Type: AWS::Logs::LogGroup
+  #   Properties:
+  #     RetentionInDays: 30
+  #     LogGroupName: !Sub "/${AWS::StackName}/APIAccessLogs"
